<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/server_port"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/hint_server_port"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <Button
        android:id="@+id/start"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/start_server"
        app:layout_constraintEnd_toEndOf="@+id/server_port"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/server_port"
        app:layout_constraintTop_toBottomOf="@+id/server_port" />

    <TextView
        android:id="@+id/label"
        android:layout_width="267dp"
        android:layout_height="23dp"
        android:layout_marginBottom="32dp"
        android:text="@string/server_label"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/server_port"
        app:layout_constraintEnd_toEndOf="@+id/server_port"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/server_port" />

</androidx.constraintlayout.widget.ConstraintLayout>